k8s/apps/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: collabora
spec:
  selector:
    app: collabora
  ports:
    - port: 9980
      targetPort: 9980
